# llm-model-generator/app/alembic/versions/f16b12e4dcf3_add_table_appmodels_with_ontology_based_.py
@@ -1,0 +1,46 @@
+"""Add table appmodels with ontology based application models
+
+Revision ID: f16b12e4dcf3
+Revises: 21e1964414eb
+Create Date: 2026-03-16 14:53:34.240049
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+from sqlalchemy.dialects import postgresql
+import sqlmodel.sql.sqltypes
+
+
+
+# revision identifiers, used by Alembic.
+revision: str = 'f16b12e4dcf3'
+down_revision: Union[str, Sequence[str], None] = '21e1964414eb'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    """Upgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.create_table('appmodel',
+    sa.Column('title', sqlmodel.sql.sqltypes.AutoString(length=255), nullable=False),
+    sa.Column('description', sqlmodel.sql.sqltypes.AutoString(length=1024), nullable=True),
+    sa.Column('id', sa.Uuid(), nullable=False),
+    sa.Column('owner_id', sa.Uuid(), nullable=False),
+    sa.Column('created_at', sa.DateTime(timezone=True), nullable=True),
+    sa.Column('definition', postgresql.JSONB(astext_type=sa.Text()), nullable=True),
+    sa.ForeignKeyConstraint(['owner_id'], ['user.id'], ),
+    sa.PrimaryKeyConstraint('id')
+    )
+    op.add_column('user', sa.Column('created_at', sa.DateTime(timezone=True), nullable=True))
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    """Downgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_column('user', 'created_at')
+    op.drop_table('appmodel')
+    # ### end Alembic commands ###
